--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,8 @@
 	-->
 	<security-role>
 		<description>Group with read-only access to stock portfolios</description>
-		<role-name>StockViewer</role-name>
+		<!-- <role-name>StockViewer</role-name> -->
+		<role-name>StockTrader</role-name>
 	</security-role>
 	<security-role>
 		<description>Group with full access to stock portfolios</description>
@@ -26,11 +27,11 @@
 		</web-resource-collection>
 		<auth-constraint>
 			<description>Roles allowed to access read-only operations on portfolios</description>
-			<role-name>StockViewer</role-name>
+			<!-- <role-name>StockViewer</role-name> -->
 			<role-name>StockTrader</role-name>
 		</auth-constraint>
 	</security-constraint>
-	<deny-uncovered-http-methods />
+	<!-- <deny-uncovered-http-methods /> -->
 	<security-constraint>
 		<display-name>Portfolio read/write security</display-name>
 		<web-resource-collection>
