--- a/manifests/deploy.yaml
+++ b/manifests/deploy.yaml
@@ -34,7 +34,7 @@ spec:
       containers:
       - name: portfolio
 #       image: portfolio:latest # Microservice Builder
-        image: default-route-openshift-image-registry.apps.ocp4.sbm.com/stock-trader/portfolio:1.0
+        image: image-registry.openshift-image-registry.svc.cluster.local:5000/stock-trader/portfolio:1.0
 #       image: registry.ng.bluemix.net/stock_trader/portfolio:latest # IBM Kubernetes Service
        # image: ibmstocktrader/portfolio:latest # Docker Hub
         env:
@@ -227,20 +227,20 @@ spec:
 #         secretName: kafka-keystore
 ---
 #Deploy the autoscaler
-apiVersion: autoscaling/v1
-kind: HorizontalPodAutoscaler
-metadata:
-  name: portfolio-hpa
-  labels:
-    solution: stock-trader
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: portfolio
-  maxReplicas: 10
-  minReplicas: 2
-  targetCPUUtilizationPercentage: 60
+#apiVersion: autoscaling/v1
+#kind: HorizontalPodAutoscaler
+#metadata:
+#  name: portfolio-hpa
+#  labels:
+#    solution: stock-trader
+#spec:
+#  scaleTargetRef:
+#    apiVersion: apps/v1
+#    kind: Deployment
+#    name: portfolio
+#  maxReplicas: 10
+#  minReplicas: 2
+#  targetCPUUtilizationPercentage: 60
 ---
 #Deploy the service
 apiVersion: v1
